<resources>
    <string name="app_name">PPBank2.0</string>
    <string name="mail">mail</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="forget_password">forget password?</string>
    <string name="register">register?</string>
    <string name="account">account</string>
    <string name="apply">apply</string>
    <string name="task">task</string>
    <string name="more">more</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">income</string>
    <string name="expense">expense</string>
    <string name="balance">"balance  $ "</string>
    <string name="expense_apply">Expense Apply</string>
    <string name="prize_apply">Prize Apply</string>
    <string name="privacy_policy">1.Introduction: Our Principles for Protecting Your Privacy This Privacy Policy explains how LINE Taiwan Limited (“Company,” “we,” “us,” or “our”) will handle and safeguard the information you provide us when you use our service(s) listed in Covered Services section below (“Service”) and the choices you have to access and control your information. As explained in detail below, we follow these basic principles so that we may respect your privacy and protect your information: 1.We will identify the purposes for collecting your information. 2.We will inform you of the information that will be collected and seek your consent to collect, use, or disclosure your information. 3.We will collect only information that is necessary to carry out the identified purposes of use. 4.We will use or disclose your information only for the purposes for which it is collected, except with your consent or as required by law, and we will keep your information only as long as necessary to fulfill those purposes. 5.We will endeavor to make sure that your information is accurate, complete, and up-to-date. 6.We will protect your information by appropriate security safeguards. 7.We will make our policies and practices for the handling of your information as transparent as possible. 8.You always will have access to your information and will be able to correct your information as appropriate. 9.We always will be accountable to you. You always have the right to voice your opinion regarding our compliance with the above principles and this Privacy Policy. 2.What Types of Information and How Does the Company Collect from Me? We obtain certain information from you that is necessary to allow you to use our Service. There are two basic types of information that we collect: a.Information that You Provide -Information Registered and Provided by Users To allow users to use the Service as smoothly as possible, and to promote effortless communication between users, users may be asked to register user information such as phone number, email address, zip code, mailing/shipping address or any other personal information which is related to the Services and may directly or indirectly identify users. -Promotional Events There may be occasions where you might will be asked to provide details such as your name, address, phone number, email address, gender, and date of birth, for the purposes of surveys, lot drawings, and other promotional events, where we require these details to courier prizes, and for the delivery of purchased products, etc., to you. -User Contact Information We collect user information when the user contacts us by our online inquiry form, including email address, device type, and OS type etc., to help establish the user\'s identity, for examination into reported problems and to provide an appropriate response to those inquiries. -Transaction and Payment Information There may be occasions where the transaction information in correlating to the applicable Service(s), payment amount and method, and users’ credit card information will be acquired for the purpose of processing transaction and payments related to purchases and paid services. Please note that we will not retain any credit card information as settlements of purchases shall be completed by the appropriate payment agencies. b.Information We Obtain From Your Use of the Service -Your internal LINE user number To confirm the identity of the user and prevent any unauthorized user of the Service, and to link the Service with your LINE messenger account. -Cookies To provide the best possible Service to users, as well as for maintenance and security purposes, Cookies may be used to store user settings, to record access figures as well as monitoring usage patterns and statistics. For example, we may use Google Analytics to assist us with this. You can choose to deactivate Cookies. You, however, will not be able to use parts of the Service which require Cookies to be active. -Logs Upon access to the Service, access log information such as your use history, IP address, browser type, and browser language may be automatically obtained and stored. Such information will be used to analyze user environments, thereby enabling us to provide a better Service, as well as to prevent any unauthorized/fraudulent activities which interfere with normal Service operations. -Device Information Your device information (e.g., App version, OS version, language and country setting, and device model) might be acquired at times. This information will be used to improve our Service quality, as well as to prevent illegal or improper use of Service. You are free to provide us with personal information, but, without such information, certain functions and features of the Service may not be accessible. 3.How does the Company Use Information Collected? The Company, as well as LINE Corporation and its subsidiary and affiliated entities (collectively referred to herein as “LINE Affiliates”), uses information collected for the following purposes listed below: -to offer an undisturbed and smooth Service to users; -to verify your identity; -to prevent any unauthorized/fraudulent use of or abuse of the Service; -to improve and/or optimize the Service; -to enable us to provide customer support, and respond effectively to your inquires and claims; -to conduct user satisfaction surveys; -to provide information regarding the Services etc., as well as advertising or promotional information from LINE Affiliates and our business partners; -to measure the effectiveness of advertisements that we place on the Internet or in other media; -to provide or market services, products and benefits to you, including but not limited to special events and promotions from the Company; -to identify winners for promotional events, to courier gifts to those winners, and to deliver purchased products and the like; -to aggregate anonymized statistical data regarding the Service; -to provide new future developments regarding the Service; -to process claims relating to purchased items and paid services; -to notify you of any other important information regarding the Service and to contact you if necessary; and -to comply with applicable laws or legal obligations. 4.Does the Company Share Information Collected? Other than as described in this Privacy Policy and, where relevant, other applicable privacy policies or addendums, we will never provide your information to any third parties without your consent, unless we believe in good faith that we are required or permitted to do so under applicable laws or to protect and defend our rights and/or property. 5.Does the Company Use Other Service Providers? From time to time, the Company uses service providers to assist us to offer you the best Service possible. Before we use a service provider, we ensure that these service providers will handle your information in accordance with this Privacy Policy and relevant law. 6.How Do I Access My Information or Have It Corrected? The Company has tried to make it as easy as possible for you to control your information. You can confirm or modify some information you registered at any time. You can send us a written request at any time to confirm, correct, or delete any other personal information that the Company holds which cannot be confirmed directly on the App. Upon verification of your identity, the Company will respond to your request within a reasonable period of time in accordance with relevant law. 7.User Generated Contents: About Information You Upload In the course of using our Service, you may choose to exchange information (such as profile name, pictures, and comments) with other users. Please note that, such information can be read, collected, or used by other users, and we are not responsible for the information you choose to exchange with other users. 8.How Does the Company Try to Make the Service Safe? We have tried to and will continue to try to make our Service safe as much as possible. As part of our ongoing efforts, our employees may access information you provided if there is a reason for us to believe that our Terms of Services was or likely to be violated or in the event of a dispute between users. 9.How Long Does the Company Keep My Information? The Company will retain your personal information for the length of time needed to fulfill the purposes outlined in this privacy policy unless a longer retention period is required or permitted by law. 10.Where Is My Information Processed and Stored? To provide the Service, the Company processes and stores information on secure servers in countries around the world. By continuing to use the Service, you agree that the Company can transfer your information outside of your country. 11.Covered Services This Privacy Policy is applicable to the following service(s): -LINE Supporters -LINE STORE -LINE API Qualification Exam -LINE GIFTSHOP -LINE MUSIC -LINE Fact Checker -Other services and campaign designated by the Company 12.Comments? Questions? If you have any questions about our Privacy Policy or how we handle your information, please let us know using our Contact Form (https://contact.line.me/en/) or by writing to us: LINE Taiwan Limited Attn: Privacy Policy 10F., No. 610, Rui-Guang Rd., Neihu Dist., Taipei City 114, Taiwan (R.O.C.) 13.Changes to our Privacy Policy We will amend our Privacy Policy from time to time to reflect changes to the Service and relevant law and regulation. The Privacy Policy was released on October 27, 2015, and the last time we updated was July 5, 2019. We will let you know when we make any important changes to our Privacy Policy via the App and/or by other means. You can always access our Privacy Policy directly in the App and on our website. Your continuous use of the Service would be deemed as your acceptance of the changes. 14.Language This Privacy Policy is made in Chinese and English versions. In case of any discrepancy, the Chinese version shall prevail. [END OF PRIVACY POLICY]</string>
</resources>
